remove unused methods, fix deprecated new Long()